stDemoOne/force-app/main/default/objects/HealthcareFacility/HealthcareFacility.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>