stDemoOne/force-app/main/default/objects/HealthcareFacility/fields/AccountRel__c.field-meta.xml
<CustomField>
    <fullName>AccountRel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Healthcare Facilities</relationshipLabel>
    <relationshipName>Healthcare_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>