stDemoOne/force-app/main/default/objects/HealthcareFacility/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Healthcare Facilities</relationshipLabel>
    <relationshipName>HealthcareFacilities</relationshipName>
    <type>Lookup</type>
</CustomField>