stDemoOne/force-app/main/default/objects/HealthcareFacility/fields/SiteFacilityType__c.field-meta.xml
<CustomField>
    <fullName>SiteFacilityType__c</fullName>
    <label>Site Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Sales/Administrative</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Mixed-Use</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>