stDemoOne/force-app/main/default/objects/HealthcareFacility/recordTypes/SiteFacility.recordType-meta.xml
<RecordType>
    <fullName>SiteFacility</fullName>
    <active>true</active>
    <label>SiteFacility</label>
</RecordType>